test/functions/operatorOverloads/errors/namedOperator2.future
bug: arbitrary operator names are permitted (and generate confusing errors for methods)

#17853
