test/functions/operatorOverloads/errors/namedOperator2.good
namedOperator2.chpl:2:error: 'foo' is not a legal operator name
